--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="icon" href="style/favicon.ico" />
   </head>
   <body>
+       <div class="main-container">
     <div class="container">
       <h1 class="title">Governors Information</h1>
+      <img src="style/646.png" alt="">
       <input
         class="searchbar"
         type="text"
@@ -21,6 +23,7 @@
     <footer class="footer">
       Made by <span class="copy">Chandler Bing</span>
     </footer>
+  </div>
     <script src="./main.js"></script>
   </body>
 </html>
