--- a/About us.html
+++ b/About us.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="style/about us.css">
 </head>
 <body>
+    <div class="menu-icon">Menu</div>
+    <navbar id="list">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="About us.html">About Us</a></li>
+            <li><a href="">Migration</a></li>
+            <li><a href="stats.html">Kvk Stats</a></li>
+            <li><a href="">Hall of Fame</a></li>
+        </ul>
+    </navbar>
+    <div class="content">
     <h1>☬・Kingdom 2381・☬ </h1>
     <ul>
         <li> Winners of KvK 1, 2 and 3</li>
@@ -17,5 +28,10 @@
         <li>Rewards based on contributions </li>
         <li> Competitive Ark Team aiming for OL success </li>
     </ul>
+</div>
+<footer class="footer">
+    Made by <span class="copy">Chandler Bing</span>
+  </footer>
+<script src="main.js"></script>
 </body>
 </html>
