--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="About us.html">About Us</a></li>
-            <li><a href="">Migration</a></li>
+            <li><a href="migration.html">Migration</a></li>
             <li><a href="stats.html">Kvk Stats</a></li>
             <li><a href="">Hall of Fame</a></li>
         </ul>
