--- a/About us.html
+++ b/About us.html
@@ -6,18 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
     <link rel="stylesheet" href="style/about us.css">
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </head>
 <body>
-    <div class="menu-icon">Menu</div>
-    <navbar id="list">
-        <ul>
+    <nav>
+        <div class="hamburger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
+        <div class="container-big">
+          <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="About us.html">About Us</a></li>
+            <li><a href="About us.html">About us</a></li>
             <li><a href="migration.html">Migration</a></li>
-            <li><a href="stats.html">Kvk Stats</a></li>
-            <li><a href="">Hall of Fame</a></li>
-        </ul>
-    </navbar>
+            <li><a href="stats.html">Kvk stats</a></li>
+            <li><a href="#">Hall of fame</a></li>
+          </ul>
+          <div class="icons">
+            <ion-icon class="star" name="star-outline"></ion-icon>
+            <ion-icon class="star" name="star-outline"></ion-icon>
+          </div>
+        </div>
+      </nav>
     <div class="content">
     <h1>☬・Kingdom 2381・☬ </h1>
     <ul>
