--- a/index.html
+++ b/index.html
@@ -6,22 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kingdom 2381</title>
     <link rel="stylesheet" href="style/home.css" />
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
   </head>
   <body>
-    <div class="menu-icon">Menu</div>
-    <navbar id="list">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="About us.html">About Us</a></li>
-        <li><a href="migration.html">Migration</a></li>
-        <li><a href="stats.html">Kvk Stats</a></li>
-        <li><a href="">Hall of Fame</a></li>
-      </ul>
-    </navbar>
-    <img src="style/rise-of-kingdoms-tips-featured-696x408.png" alt="" />
-    <div class="container">
-      <h1 class="typed"></h1>
+    <nav>
+      <div class="hamburger">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+      <div class="container-big">
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="About us.html">About us</a></li>
+          <li><a href="migration.html">Migration</a></li>
+          <li><a href="stats.html">Kvk stats</a></li>
+          <li><a href="#">Hall of fame</a></li>
+        </ul>
+        <div class="icons">
+          <ion-icon class="star" name="star-outline"></ion-icon>
+          <ion-icon class="star" name="star-outline"></ion-icon>
+        </div>
+      </div>
+    </nav>
+    <div class="landing">
+      <div class="container">
+        <h1 class="typed"></h1>
+      </div>
+      <div class="logo"><img src="style/Attila.png" alt="" /></div>
     </div>
+
     <footer class="footer">
       Made by <span class="copy">Chandler Bing</span>
     </footer>
@@ -31,17 +45,11 @@
     <script src="typed.min.js"></script>
     <script>
       const typed = new Typed(".typed", {
-        strings: [
-          "Welcome to kingdom 2381",
-          "For information click on about us",
-          "To see your stats click on kvk stats",
-          "For players kvk ranking click on hall of fame",
-        ],
+        strings: ["Welcome to kingdom 2381"],
         typeSpeed: 55,
-        backSpeed: 10,
+        backSpeed: 55,
         showCursor: true,
         cursorChar: "_",
-        loop: true,
       });
     </script>
   </body>
