--- a/migration.html
+++ b/migration.html
@@ -7,18 +7,29 @@
     <title>Migration</title>
     <link rel="stylesheet" href="style/migration.css">
     <script src="https://kit.fontawesome.com/e504fd66c9.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </head>
 <body>
-    <div class="menu-icon">Menu</div>
-    <navbar id="list">
-        <ul>
+    <nav>
+        <div class="hamburger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
+        <div class="container-big">
+          <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="About us.html">About Us</a></li>
+            <li><a href="About us.html">About us</a></li>
             <li><a href="migration.html">Migration</a></li>
-            <li><a href="stats.html">Kvk Stats</a></li>
-            <li><a href="">Hall of Fame</a></li>
-        </ul>
-    </navbar>
+            <li><a href="stats.html">Kvk stats</a></li>
+            <li><a href="#">Hall of fame</a></li>
+          </ul>
+          <div class="icons">
+            <ion-icon class="star" name="star-outline"></ion-icon>
+            <ion-icon class="star" name="star-outline"></ion-icon>
+          </div>
+        </div>
+      </nav>
     <div class="container">
         <h1>Migration is currently closed <i class="fa-solid fa-circle"></i></h1>
     </div>
