--- a/stats.html
+++ b/stats.html
@@ -12,12 +12,13 @@
     <div class="main-container">
     <div class="container">
       <h1 class="title">Governors Information</h1>
-      <img src="style/646.png" alt="">
+      <embed src="https://datastudio.google.com/embed/reporting/fd5f0007-b72b-466f-957c-75c53a8e054f/page/p_1ngj3rhowc" height="100%" width="100%" type="">
+      <!--<img src="style/646.png" alt="">
       <input
         class="searchbar"
         type="text"
         placeholder="Please enter your ID or your name"
-      />
+      />-->
       <div class="search-results"></div>
     </div>
     <footer class="footer">
