--- a/stats.html
+++ b/stats.html
@@ -7,24 +7,47 @@
     <title>2381 Stats</title>
     <link rel="stylesheet" href="style/main.css" />
     <link rel="icon" href="style/favicon.ico" />
+    <script src="https://kit.fontawesome.com/e504fd66c9.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="main-container">
     <div class="container">
-      <h1 class="title">Governors Information</h1>
+      <h2 class="title">Governors Information</h2>
       <embed src="https://datastudio.google.com/embed/reporting/fd5f0007-b72b-466f-957c-75c53a8e054f/page/p_1ngj3rhowc" height="100%" width="100%" type="">
-      <!--<img src="style/646.png" alt="">
+      <!-- <img src="style/646.png" alt="">
       <input
         class="searchbar"
         type="text"
         placeholder="Please enter your ID or your name"
-      />-->
+      /> -->
       <div class="search-results"></div>
     </div>
-    <footer class="footer">
-      Made by <span class="copy">Chandler Bing</span>
-    </footer>
   </div>
+  <!-- <h2>kingdom stats</h2>
+  <div class="header">
+    <div class="box">
+      <div class="row special"><i class="fa-solid fa-hand-fist"></i></div>
+      <div class="row special">5</div>
+      <div class="row">Power</div>
+      <div class="row">Difference</div>
+    </div>
+    <div class="box">
+      <div class="row special"><i class="fa-solid fa-gun"></i></div>
+      <div class="row special">564</div>
+      <div class="row">Kills</div>
+      <div class="row">Gained</div>
+    </div>
+    <div class="box">
+      <div class="row special"><i class="fa-solid fa-skull"></i></div>
+      <div class="row special">5</div>
+      <div class="row">Deaths</div>
+      <div class="row">Gained</div>
+    </div>
+
+  </div> -->
+  <footer class="footer">
+    Made by <span class="copy">Chandler Bing</span>
+  </footer>
     <script src="stats.js"></script>
   </body>
 </html>
