--- a/stats.html
+++ b/stats.html
@@ -19,10 +19,11 @@
         class="searchbar"
         type="text"
         placeholder="Please enter your ID or your name"
-      /> -->
-      <div class="search-results"></div>
-    </div>
+      /> 
+      <div class="search-results"></div> -->
       <embed src="https://datastudio.google.com/embed/reporting/fd5f0007-b72b-466f-957c-75c53a8e054f/page/p_1ngj3rhowc" height="100%" width="100%" type="">
+    </div>
+      
   </div>
   <!-- <h2>kingdom stats</h2>
   <div class="header">
